--- a/public/css/src/notifications/notifications.css
+++ b/public/css/src/notifications/notifications.css
@@ -10,8 +10,8 @@
     position: fixed;
     background: white;
     color: #191919;
-    top: 59px;
-    box-shadow: 0px 2px 10px #B3B3B3;
+    top: 56px;
+    box-shadow: 0 3px 14px #949494;
     right: 0;
     z-index: 300;
     display: none;
