--- a/public/css/src/common.css
+++ b/public/css/src/common.css
@@ -118,6 +118,7 @@ button:hover {
     display: flex;
     align-items: center;
     justify-content: center;
+    background: #fafafa;
 }
 
 .row-date {
@@ -698,7 +699,7 @@ button:hover {
 }
 
 .user-gender.x--male {
-    background: #3fb3c6;
+    background: #1b69ec;
 }
 
 .user-gender.x--female {
@@ -1760,7 +1761,7 @@ button:hover {
 
 .header-wrap {
     position: relative;
-    z-index: 101;
+    z-index: 1000;
     width: 100%;
     height: 54px;
     position: fixed;
@@ -1800,9 +1801,9 @@ button:hover {
 
 .header-wrap.x--white .app__menu-item {
 }
-.header-wrap.x--white .app__menu-icon {color: #ccc;color: #1b69ec;}
+.header-wrap.x--white .app__menu-icon {color: #ccc;color: #1b69ec;color: #454545;}
 .header-wrap.x--white .app__menu-item:hover .app__menu-icon {
-    color: #1B69ec;
+    /* color: #1B69ec; */
 }
 
 .header-wrap.x--white .app__menu-item.x--active {background: white;}
@@ -1840,16 +1841,16 @@ button:hover {
 }
 
 
-.header-wrap.x--empty .app__menu-item .app__menu-icon {
+.x--filled {
     display: none;
 }
-.header-wrap.x--empty .app__menu-item .app__menu-icon.x--empty {
+.x--empty {
     display: block;
 }
-.header-wrap.x--empty .app__menu-item.x--active .app__menu-icon {
+.x--active .x--filled {
     display: block;
 }
-.header-wrap.x--empty .app__menu-item.x--active .app__menu-icon.x--empty {
+.x--active .x--empty {
     display: none;
 }
 
