--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -132,19 +132,19 @@
           <ul>
             <li class="app__menu-item x--menu" data-link="menu">
               <a href="#menu">
-                <i class="app__menu-icon icon icon-menu-app"></i>
+                <i class="app__menu-icon icon icon-menu-app x--filled"></i>
                 <i class="app__menu-icon icon icon-menu-app x--empty"></i>
               </a>
             </li>
             <li class="app__menu-item x--map" data-link="map">
               <a href="#map"> 
-                <i class="app__menu-icon icon icon-location"></i>
+                <i class="app__menu-icon icon icon-location x--filled"></i>
                 <i class="app__menu-icon icon icon-location-empty x--empty"></i>
               </a>
             </li>
             <li class="app__menu-item x--search" data-link="search">
               <a href="#search">
-                <i class="app__menu-icon icon icon-members"></i>
+                <i class="app__menu-icon icon icon-members x--filled"></i>
                 <i class="app__menu-icon icon icon-members-empty x--empty"></i>
               </a>
             </li>
@@ -173,13 +173,13 @@
         <ul>
           <li class="app__menu-item x--notifications">
             <a href="#notifications">
-              <i class="app__menu-icon icon icon-bell"></i>
+              <i class="app__menu-icon icon icon-bell x--filled"></i>
               <i class="app__menu-icon icon icon-bell-empty x--empty"></i>
             </a>
           </li>
           <li class="app__menu-item x--chats">
             <a href="#chat">
-              <i class="app__menu-icon icon icon-chat-bubble-duo"></i>
+              <i class="app__menu-icon icon icon-chat-bubble-duo x--filled"></i>
               <i class="app__menu-icon icon icon-chat-bubble-duo-empty x--empty"></i>
             </a>
           </li>
@@ -207,7 +207,8 @@
         <li class="menu-item x--profile" data-link="profile">
           <div class="menu-item__body">
             <div class="menu-item__icon x--round-icon">
-              <i class="icon icon-profile-rounded-empty"></i>
+              <i class="icon icon-profile-rounded x--filled"></i>
+              <i class="icon icon-profile-rounded-empty x--empty"></i>
             </div>
             <h3 data-lid="menu_profile"></h2>
           </div>
@@ -216,7 +217,8 @@
         <li class="menu-item x--friends" data-link="friends">
           <div class="menu-item__body">
             <div class="menu-item__icon x--round-icon">
-              <i class="icon icon-users-empty"></i>
+              <i class="icon icon-users x--filled"></i>
+              <i class="icon icon-users-empty x--empty"></i>
             </div>
             <h3 data-lid="menu_friends"></h2>
           </div>
@@ -225,7 +227,8 @@
         <li class="menu-item x--settings" data-link="settings">
           <div class="menu-item__body">
             <div class="menu-item__icon">
-              <i class="icon icon-cog-empty x--round-icon"></i>
+              <i class="icon icon-cog x--filled"></i>
+              <i class="icon icon-cog-empty x--empty"></i>
             </div>
             <h3 data-lid="menu_settings"></h2>
           </div>
