--- a/public/css/src/map/map.css
+++ b/public/css/src/map/map.css
@@ -60,8 +60,29 @@
     color: white;
     right: 20px;
     font-size: 20px;
-    top: 80px;
+    bottom: 30px;
+    top: auto;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    width: 180px;
+    height: 40px;
+    justify-content: center;
+    align-items: center;
+    font-family: 'quenda';
+    font-size: 14px;
+    /* font-family: 'creamy'; */
+    /* font-size: 23px; */
+    /* font-family: 'open sans'; */
+    /* font-size: 14px; */
+    /* font-weight: 600; */
+    text-transform: uppercase;
+    background: linear-gradient(45deg, #3c7dea,rgb(4, 65, 169));
+    box-shadow: 0 2px 3px #8a8a8a;
+    background: linear-gradient(45deg, #db4760, #fd7124 );
 }
+
+.map__icon.x--create-before.js-create-before.x--round-icon {}
 
 .map__icon.x--filter-dates {
     color: #1b69ec;
@@ -173,8 +194,8 @@
 }
 
 .marker.x--face {
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
     border: 1px solid;
     /* box-sizing: border-box; */
     padding: 0px;
@@ -185,6 +206,7 @@
     border-color: rgb(49, 49, 49);
     border-color: white;
     border-color: #1b69ec;
+    /* border-color: #696969; */
     /* border: none; */
     /* box-shadow: 0px 2px 2px #cacaca; */
 }
@@ -218,7 +240,7 @@
 
 .mrk__img {
     z-index: 1;
-    margin: 3px;
+    margin: 4px;
 }
 
 .mrk__status {
@@ -268,8 +290,9 @@
 
 .mrk__seen {
     background: #e61515;
-    top: 3px;
-    right: -1px;
+    background: #1b69ec;
+    top: 5px;
+    right: 1px;
     width: 8px;
     height: 8px;
     border-radius: 100px;
