--- a/public/css/src/ioptions/ioptions.css
+++ b/public/css/src/ioptions/ioptions.css
@@ -41,7 +41,7 @@
 
 .ioptions__action.x--back {
     color: #DB4760;
-    color: #1b69ec;
+    color: #1a59c3;
     font-weight: 700;
     margin-top: 8px;
 }
