--- a/public/css/src/common.css
+++ b/public/css/src/common.css
@@ -353,8 +353,8 @@ button:hover {
 }
 
 .toggle.x--active {
-    background: #1B69EC;
-    border-color: #1B69EC;
+    background: #1a59c3;
+    border-color: #1a59c3;
 }
 
 .toggle.x--active .toggle__button {
@@ -389,15 +389,15 @@ button:hover {
 }
 
 .action .action__validate {
-    background: #1b69ec;
-    border: 1px solid #1B69EC;
+    background: #1a59c3;
+    border: 1px solid #1a59c3;
     color: white;
 }
 
 .action .action__cancel {
     background: white;
-    color: #1b69ec;
-    border-color: #1b69ec;
+    color: #1a59c3;
+    border-color: #1a59c3;
 }
 
 .icon-item {
@@ -412,7 +412,7 @@ button:hover {
 }
 
 .edit {
-    color: rgb(27, 105, 236);
+    color: #1a59c3;
     position: absolute;
     right: 0px;
     top: -10px;
@@ -699,7 +699,7 @@ button:hover {
 }
 
 .user-gender.x--male {
-    background: #1b69ec;
+    background: #1a59c3;
 }
 
 .user-gender.x--female {
@@ -952,13 +952,13 @@ button:hover {
 
 .app-header__brand {
     font-family: 'quenda';
-    color: #1b69ec;
-    font-size: 24px;
+    font-size: 20px;
     position: absolute;
     transform: translate(-50%,-50%);
     left: 50%;
     font-weight: bold;
     top: 54%;
+    color: #1a59c3;
 }
 
 .app-header__splitter {
@@ -1206,7 +1206,7 @@ button:hover {
 }
 
 .modal-subheader b {
-    color: #1b69ec;
+    color: #1a59c3;
     font-family: 'quenda';
 }
 
@@ -1252,7 +1252,7 @@ button:hover {
     width: 70px;
     height: 70px;
     border-radius: 100px;
-    color: #1b69ec;
+    color: #1a59c3;
     background: white;
     border: 4px solid;
 }
@@ -1260,9 +1260,9 @@ button:hover {
 .modal.x--share button,
 .modal.x--be-create button,
 .modal.x--request button {
-    background: #1B69EC;
+    background: #1a59c3;
     color: white;
-    border: 4px solid #1B69EC;
+    border: 4px solid #1a59c3;
 }
 
 .modal.x--logout button {
@@ -1386,7 +1386,7 @@ button:hover {
 }
 
 .modal.x--delete button[data-action="confirm"] {
-    color: #1b69ec;
+    color: #1a59c3;
     font-weight: bolder;
     background: white;
     border: 1px dashed;
@@ -1568,8 +1568,8 @@ button:hover {
     font-family: 'creamy';
     font-weight: 700;
     font-size: 34px;
-    color: #1b69ec;
     margin-bottom: 20px;
+    color: #1a59c3;
 }
 
 .slide-ghost__title span {}
@@ -1796,12 +1796,13 @@ button:hover {
 .header-wrap.x--white .app-header__splitter {
     background: white;
     background: #1b69ec;
-    height: 2px;
+    height: 1px;
+    background: #1a59c3;
 }
 
 .header-wrap.x--white .app__menu-item {
 }
-.header-wrap.x--white .app__menu-icon {color: #ccc;color: #1b69ec;color: #454545;}
+.header-wrap.x--white .app__menu-icon {color: #ccc;color: #1b69ec;color: #454545;color: #1a59c3;}
 .header-wrap.x--white .app__menu-item:hover .app__menu-icon {
     /* color: #1B69ec; */
 }
@@ -1809,7 +1810,7 @@ button:hover {
 .header-wrap.x--white .app__menu-item.x--active {background: white;}
 
 .header-wrap.x--white .app__menu-item.x--active .app__menu-icon {
-    color: #1b69ec;
+    color: #1a59c3;
 }
 .header-wrap.x--white .app__menu-item.x--active:hover .app__menu-icon {
     
