--- a/public/css/src/landing/landing.css
+++ b/public/css/src/landing/landing.css
@@ -48,7 +48,7 @@
     width: 80px;
     height: 34px;
     border: 1px solid;
-    color: #1b69ec;
+    color: #1a59c3;
     background: white;
     font-size: 12px;
     border-radius: 100px;
@@ -191,7 +191,7 @@
     font-size: 15px;
     width: 100%;
     height: 100%;
-    background: #236de8;
+    background: #1a59c3;
     border-radius: 100px;
 }
 
