--- a/public/css/src/map/map.css
+++ b/public/css/src/map/map.css
@@ -26,7 +26,7 @@
     font-size: 22px;
     cursor: pointer;
     background: #ffffff;
-    color: #1b69ec;
+    color: #1a59c3;
     /* border: 2px solid; */
     width: 50px;
     height: 50px;
@@ -65,23 +65,20 @@
     left: 0;
     right: 0;
     margin: 0 auto;
-    width: 180px;
-    height: 40px;
+    width: 60px;
+    height: 60px;
     justify-content: center;
     align-items: center;
     font-family: 'quenda';
-    font-size: 14px;
-    /* font-family: 'creamy'; */
-    /* font-size: 23px; */
-    /* font-family: 'open sans'; */
-    /* font-size: 14px; */
-    /* font-weight: 600; */
-    text-transform: uppercase;
-    background: linear-gradient(45deg, #3c7dea,rgb(4, 65, 169));
+    font-size: 20px;
     box-shadow: 0 2px 3px #8a8a8a;
-    background: linear-gradient(45deg, #db4760, #fd7124 );
+    background: linear-gradient( 45deg, #1a59c3, #7b4cbb );
 }
 
+
+.map__icon.x--create-before:hover {
+    /* background: red; */
+}
 .map__icon.x--create-before.js-create-before.x--round-icon {}
 
 .map__icon.x--filter-dates {
@@ -91,9 +88,7 @@
     top: 110px;
 }
 
-.map__icon.x--create-before:hover {
-    background: rgba(27, 105, 236, 0.75);
-}
+.map__icon.x--create-before:hover {opacity: .8!important;}
 
 .map__icon.x--geoloc {
     left: 20px;
@@ -135,7 +130,7 @@
     padding: 0 30px;
     font-size: 13px;
     border: none;
-    border-bottom: 3px solid #1b69ec;
+    border-bottom: 3px solid #1a59c3;
 }
 
 .map-browse input::-webkit-input-placeholder {
@@ -168,7 +163,7 @@
     font-size: 16px;
     background: white;
     border-radius: 100px;
-    color: #1b69ec;
+    color: #1a59c3;
     cursor: pointer;
 }
 
@@ -206,9 +201,7 @@
     border-color: rgb(49, 49, 49);
     border-color: white;
     border-color: #1b69ec;
-    /* border-color: #696969; */
-    /* border: none; */
-    /* box-shadow: 0px 2px 2px #cacaca; */
+    border-color: #1a59c3;
 }
 
 .marker.x--face > * {
@@ -244,16 +237,19 @@
 }
 
 .mrk__status {
-    bottom: -4px;
+    bottom: -2px;
     right: -4px;
     z-index: 2;
-    width: 16px;
-    height: 16px;
-    font-size: 9px;
+    width: 20px;
+    height: 20px;
+    font-size: 11px;
+    justify-content: center;
+    align-items: center;
 }
 
 .mrk__status.x--accepted {
     background: #1b69ec;
+    background: #1a59c3;
     color: white;
     border: 2px solid white;
 }
@@ -273,16 +269,15 @@
     color: #ffa900;
     border: 2px solid;
     border-color: white;
-    /* border-color: #ffa900; */
-    /* border-color: #ffec4d; */
+    border-color: #ffec4d;
 }
 
 .mrk__status.x--host.x--round-icon {}
 
 .mrk__status.x--pending {
-    color: #1b69ec;
+    color: #1a59c3;
     background: white;
-    border: 2px solid #1b69ec;
+    border: 2px solid #1a59c3;
     font-size: 9px;
 }
 
@@ -290,7 +285,8 @@
 
 .mrk__seen {
     background: #e61515;
-    background: #1b69ec;
+    /* background: #8814b3; */
+    /* background: #fd7124; */
     top: 5px;
     right: 1px;
     width: 8px;
