--- a/public/css/src/notifications/notifications.css
+++ b/public/css/src/notifications/notifications.css
@@ -10,7 +10,7 @@
     position: fixed;
     background: white;
     color: #191919;
-    top: 56px;
+    top: 55px;
     box-shadow: 0 3px 14px #949494;
     right: 0;
     z-index: 300;
@@ -194,7 +194,7 @@ Whispereen  : #58c170
     position: relative;
     top: -25px;
     flex-shrink: 0;
-    color: #1b69ec;
+    color: #1a59c3;
 }
 
 .notification .notification__icon {
