--- a/public/css/src/search/search.css
+++ b/public/css/src/search/search.css
@@ -29,7 +29,7 @@
 .search-filters__icon {
     font-size: 18px;
     cursor: pointer;
-    color: #1b69ec;
+    color: #1a59c3;
     height: 50px;
     width: 50px;
     z-index: 10;
@@ -316,7 +316,7 @@
     right: 14px;
     cursor: pointer;
     font-size: 14px;
-    color: #1b69ec;
+    color: #1a59c3;
 }
 
 .search-filters__close i {
