--- a/public/css/src/pictures/pictures.css
+++ b/public/css/src/pictures/pictures.css
@@ -307,7 +307,7 @@
   left: 50%;
   border-radius: 100px;
   transform: translate(-50%,0);
-  background: #1a59c3;
+  background: #c31aba;
   height: 26px;
 }
 
