--- a/public/css/src/friends/friends.css
+++ b/public/css/src/friends/friends.css
@@ -159,16 +159,19 @@
 .invite-friends-popup {
     position: fixed;
     bottom: 0;
-    right: 30px;
+    left: 0;
     z-index: 100;
     font-size: 12px;
     height: 70px;
     background: white;
     border: 1px solid #f7f7f7;
-    box-shadow: 0 0 6px rgba(0, 0, 0, 0.27);
     justify-content: center;
     align-items: center;
-    padding: 0 20px;
+    border: 1px solid #eee;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .invite-friends-popup__icon {
@@ -197,7 +200,6 @@
 .invite-friends-popup-message {
     display: flex;
     flex-flow: column;
-    width: 100%;
 }
 
 .invite-friends-popup__icon i {}
