--- a/public/css/src/map/map.css
+++ b/public/css/src/map/map.css
@@ -18,6 +18,7 @@
     position: absolute;
     z-index: 1;
     font-size: 30px;
+    border: 1px solid #ececec;
 }
 
 .map__icon.x--geoloc,
@@ -73,6 +74,7 @@
     font-size: 20px;
     box-shadow: 0 2px 3px #8a8a8a;
     background: linear-gradient( 45deg, #1a59c3, #7b4cbb );
+    border: none;
 }
 
 
